[#4] feat(footer) : more update in text

--- a/src/app/components/base/home-mian-footer/home-mian-footer.component.html
+++ b/src/app/components/base/home-mian-footer/home-mian-footer.component.html
@@ -40,10 +40,11 @@
           <div class="col-sm-3"></div>
           <div class="col">
             <ul>
-              <li class="footer-menu-title">Entreprise</li>
-              <li class="footer-menu-item" [routerLink]="'/privacy'">Confidentialité</li>
-              <li class="footer-menu-item" [routerLink]="'/terms-of-use'">Conditions d'utilisation </li>
-              <li class="footer-menu-item mb-1" [routerLink]="'/cookies'">Cookies</li>
+              <li class="footer-menu-title">عن المتجر
+              </li>
+              <li class="footer-menu-item" [routerLink]="'/'">عن المتجر</li>
+              <li class="footer-menu-item" [routerLink]="'/'">فريق المتجر</li>
+              <li class="footer-menu-item mb-1" [routerLink]="'/'">الشحن والتسليم</li>
               <!-- <li class="footer-menu-item" [routerLink]="'/Support'">Support</li> -->
             </ul>
           </div>
