--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,8 +7,9 @@
   <!-- start hero  -->
   <div id="hero">
     <div class="row text-sm-right text-center">
-      <div class="col-sm-6 col-12 order-sm-1 order-1 d-flex align-items-center justify-content-sm-start justify-content-center">
-        <img class="hero-img" src="./assets/images/nexProMa_img_hero.svg" >
+      <div
+        class="col-sm-6 col-12 order-sm-1 order-1 d-flex align-items-center justify-content-sm-start justify-content-center">
+        <img class="hero-img" src="./assets/images/nexProMa_img_hero.svg">
       </div>
       <div class="col-sm-6 col-12 order-sm-2 order-2 d-flex align-items-center pt-3">
         <div class=" ">
@@ -16,14 +17,15 @@
             علاش حنا و ماشي شي حد آخر؟
           </h2>
           <h2 class="hero-title-second  ">
-             ! أجي نقول ليك علاش
+            ! أجي نقول ليك علاش
           </h2>
           <p class="hero-text  mb-4">
-            نوفر لك منتجات عالية الجودة بأسعار تنافسية. التسوق معنا ممتع وآمن، مع كل التسهيلات في اختيار المنتج، الدفع، والشحن
+            نوفر لك منتجات عالية الجودة بأسعار تنافسية. التسوق معنا ممتع وآمن، مع كل التسهيلات في اختيار المنتج، الدفع،
+            والشحن
           <div class="hero-btn ">
             <button type="button" [routerLink]="['inscription']" class="btn btn-primary ">
               <i class="fas fa-search fa-lg"></i> استعراض المزيد
-          </button>
+            </button>
             <!-- <button type="button" [routerLink]="['inscription']" class="btn btn-success mx-3"> Employeur</button> -->
           </div>
         </div>
@@ -32,162 +34,140 @@
   </div>
 
 
-  <!-- strat best_offres -->
-  <div id="best_offres" class=" mt-5 mb-5">
-    <h3 class="best_offres-title text-center ">- أفضل منتجات -</h3>
-    <div class="row  ">
-      <div class="col-lg-4 col-sm-6 " *ngFor="let offer of offers; let i = index;">
-        <div *ngIf="offer.reference" class="card mt-4 w-100 " >
-            <!-- <div class="card-line"></div> -->
-             <div class="card-header">
-              <div class="row mx-0 px-0 w-100">
-                <div class="col-4 px-0 d-flex justify-content-center">
-                  <img class="card-item-logo-offre " src="./assets/images/logo_offre.svg" >
-                </div>
-                <div class="col-8 px-0">
-                  <h5 class="card-title title-offer ">{{offer.title}}</h5>
-                  <p class="name-Entrop-offer">OCP</p>
-                </div>
-              </div>
-             </div>
-            <div class="card-body px-4 pt-2 pb-4 text-center pointer" (click)="goOfferDetails(offer.reference)">
-
-                <div class="d-flex justify-content-between align-items-center ">
-                    <div class="d-flex justify-content-start align-items-center ">
-                        <i class="fas fa-file-contract mr-2 mb-2 color-icon" ></i>
-                        <div class="offer-labels mb-2">{{offer.contractTypeStr}}</div>
-                    </div>
-                    <div class="d-flex justify-content-start align-items-center">
-                        <i class="fas fa-user-tie mr-2 mb-2 color-icon" ></i>
-                        <div class="offer-labels mb-2">{{offer.workModel}}</div>
-                    </div>
-                </div>
-
-                <div class="d-flex justify-content-between align-items-center ">
-                  <div class="d-flex justify-content-start align-items-center">
-                      <i class="fas fa-graduation-cap mr-2 mb-2 color-icon" ></i>
-                      <div class="offer-labels mb-2">{{offer.studyLevel}}</div>
-                  </div>
-                </div>
-
-                <div class="d-flex justify-content-between align-items-center">
-                    <div class="d-flex justify-content-start align-items-center ">
-                      <i class="fas fa-map-marker-alt mr-2 mb-2 color-icon" ></i>
-                      <div class="offer-labels mb-2">{{offer.regionStr}}</div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-        <!-- Add a new row after every 3 cards -->
-        <div class="w-100" *ngIf="(i + 1) % 3 === 0"></div>
-    </div>
-    </div>
-    <div class="btn-more-offer d-flex justify-content-end " >
-      <button placement="left" ngbTooltip="Voir plus des produits" (click)="viewAllOffer()"
-      type="button" class="btn btn-primary  p-2 px-4 my-3 " >
-      <i class="fas fa-plus"></i> المزيد  </button>
-  </div>
-  </div>
+  <!-- strat best_products -->
+  <app-best-product></app-best-product>
 
 
   <!-- strat com_ca_marche -->
-  <div  id="com_ca_marche" class=" mt-5 mb-5 pb-4">
+  <div id="com_ca_marche" class=" mt-5 mb-5 pb-4">
     <h3 class="com_ca_marche-title text-center ">-أن تكون في أيدٍ موثوقة وآمنة-</h3>
     <p class="com_ca_marche-text text-center mb-sm-5 mb-3">! سنساعدك في كل خطوة</p>
     <div class="row d-flex justify-content-between ">
 
       <div class="col-sm-3 col-12 com_ca_marche-item text-center">
-        <img class="com_ca_marche-item-img  " src="./assets/images/nexProMa_satisfaction_user.svg" >
+        <img class="com_ca_marche-item-img  " src="./assets/images/nexProMa_satisfaction_user.svg">
         <br><br>
         <p class="com_ca_marche-item-text">
           منتجات مضمونة لجعل تجربتك مميزة
         </p>
       </div>
       <div class="col-sm-3 col-12 com_ca_marche-item text-center">
-        <img class="com_ca_marche-item-img  " src="./assets/images/nexProMa_livraision.svg" >
+        <img class="com_ca_marche-item-img  " src="./assets/images/nexProMa_livraision.svg">
         <br><br>
         <p class="com_ca_marche-item-text">
-          استمتع بتوصيل سريع مجاني لجميع منتجاتنا أينما كنت في <span style="color: var(--first-color-dis);font-size: 1.5rem;">سلا</span> / <span style="color: var(--first-color-dis);font-size: 1.5rem;">الرباط </span> <br> ( <span style="color: red;"> <span style="font-size: 1.5rem;">تمارة</span> في عطلة نهاية الأسبوع </span>)
+          استمتع بتوصيل سريع مجاني لجميع منتجاتنا أينما كنت في <span
+            style="color: var(--first-color-dis);font-size: 1.5rem;">سلا</span> / <span
+            style="color: var(--first-color-dis);font-size: 1.5rem;">الرباط </span> <br> ( <span style="color: red;">
+            <span style="font-size: 1.5rem;">تمارة</span> في عطلة نهاية الأسبوع </span>)
         </p>
       </div>
       <div class="col-sm-3 col-12 com_ca_marche-item text-center">
-        <img class="com_ca_marche-item-img  " src="./assets/images/nexProMa_cash_delevry.svg" >
+        <img class="com_ca_marche-item-img  " src="./assets/images/nexProMa_cash_delevry.svg">
         <br><br>
         <p class="com_ca_marche-item-text">
           استلم منتجك وادفع فقط عند الإستلام
         </p>
       </div>
       <div class="col-sm-3 col-12 com_ca_marche-item text-center ">
-        <img class="com_ca_marche-item-img " src="./assets/images/nexProMa_service_24_7.svg" >
+        <img class="com_ca_marche-item-img " src="./assets/images/nexProMa_service_24_7.svg">
         <br><br>
         <p class="com_ca_marche-item-text">
-          خدمة ما بعد البيع على مدار 24 ساعة <span style="color: var(--main-color-dis);">يوميًا</span>، طوال <span style="color: var(--first-color-dis);">الأسبوع</span>
+          خدمة ما بعد البيع على مدار 24 ساعة <span style="color: var(--main-color-dis);">يوميًا</span>، طوال <span
+            style="color: var(--first-color-dis);">الأسبوع</span>
         </p>
       </div>
     </div>
   </div>
 
 
- <!-- strat pve -->
- <div id="pve" class=" mt-5 mb-5">
-  <h3 class="pve-title text-center mb-4"> - منتجاتنا تتحدث عن نفسها - </h3>
-  <div id="carouselControls" class="carousel slide px-sm-5 " data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselControls" data-slide-to="0" class="active pointer"></li>
-      <li data-target="#carouselControls" data-slide-to="1" class="pointer"></li>
-      <li data-target="#carouselControls" data-slide-to="2" class="pointer"></li>
-      <li data-target="#carouselControls" data-slide-to="2" class="pointer"></li>
-    </ol>
-    <div class="carousel-inner ">
-      <ng-container *ngFor="let item of list">
-        <div class="carousel-item   " [ngClass]="{' active ' : item == 0 }">
-          <div class="d-sm-block d-none">
-            <div class="row d-flex justify-content-around ">
-              <div class="col-sm-3 col-6 ">
-                <img class="pve-img " src="./assets/images/pve_{{(item*3)+1}}.PNG">
-              </div>
-              <div class="col-sm-3 col-6  ">
-                <img class="pve-img " src="./assets/images/pve_{{(item*3)+2}}.PNG">
-              </div>
-              <div class="col-sm-3 col-6  ">
-                <img class="pve-img " src="./assets/images/pve_{{(item*3)+3}}.PNG">
-              </div>
-            </div>
-          </div>
-
-          <div class="d-sm-none d-block">
-            <div  class="row d-flex justify-content-around px-1 mx-0">
-              <div class="col-6 px-1">
-                <img class="pve-img " src="./assets/images/pve_{{(item*2)+1}}.PNG">
-              </div>
-              <div class="col-6  px-1">
-                <img class="pve-img " src="./assets/images/pve_{{(item*2)+2}}.PNG">
+  <!-- strat pve -->
+  <div id="pve" class=" mt-5 mb-5">
+    <h3 class="pve-title text-center mb-4"> - منتجاتنا تتحدث عن نفسها - </h3>
+    <!-- start Responsive Desktop/tablet  -->
+    <div id="carouselControls" class="carousel slide px-sm-5 d-sm-block d-none" data-ride="carousel">
+      <ol class="carousel-indicators ">
+        <li data-target="#carouselControls" data-slide-to="0" class="active pointer"></li>
+        <li data-target="#carouselControls" data-slide-to="1" class="pointer"></li>
+        <li data-target="#carouselControls" data-slide-to="2" class="pointer"></li>
+        <li data-target="#carouselControls" data-slide-to="3" class="pointer"></li>
+      </ol>
+      <div class="carousel-inner">
+        <ng-container *ngFor="let item of list">
+          <div class="carousel-item   " [ngClass]="{' active ' : item == 0 }">
+            <div class="">
+              <div class="row d-flex justify-content-around ">
+                <div class="col-sm-3 col-6 ">
+                  <img class="pve-img " src="./assets/images/pve_{{(item*3)+1}}.PNG">
+                </div>
+                <div class="col-sm-3 col-6  ">
+                  <img class="pve-img " src="./assets/images/pve_{{(item*3)+2}}.PNG">
+                </div>
+                <div class="col-sm-3 col-6  ">
+                  <img class="pve-img " src="./assets/images/pve_{{(item*3)+3}}.PNG">
+                </div>
               </div>
             </div>
+
           </div>
-
-        </div>
-      </ng-container>
+        </ng-container>
 
 
+      </div>
+
+      <button class="carousel-control-prev" type="button" data-target="#carouselControls" data-slide="prev">
+        <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
+        <i class=" icon-prev fas fa-chevron-left"></i>
+        <span class="sr-only">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-target="#carouselControls" data-slide="next">
+        <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
+        <i class="icon-next fas fa-chevron-right"></i>
+        <span class="sr-only">Next</span>
+      </button>
     </div>
-    <button class="carousel-control-prev" type="button" data-target="#carouselControls" data-slide="prev">
-      <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
-      <i class=" icon-prev fas fa-chevron-left"></i>
-      <span class="sr-only">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-target="#carouselControls" data-slide="next">
-      <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
-      <i class="icon-next fas fa-chevron-right"></i>
-      <span class="sr-only">Next</span>
-    </button>
+    <!-- start Responsive Mobile  -->
+    <div id="carouselControlsMobile" class="carousel slide px-sm-5 d-sm-none d-block" data-ride="carousel">
+      <ol class="carousel-indicators ">
+        <li data-target="#carouselControlsMobile" data-slide-to="0" class="active pointer"></li>
+        <li data-target="#carouselControlsMobile" data-slide-to="1" class="pointer"></li>
+        <li data-target="#carouselControlsMobile" data-slide-to="2" class="pointer"></li>
+        <li data-target="#carouselControlsMobile" data-slide-to="3" class="pointer"></li>
+        <li data-target="#carouselControlsMobile" data-slide-to="4" class="pointer"></li>
+        <li data-target="#carouselControlsMobile" data-slide-to="5" class="pointer"></li>
+      </ol>
+      <div class="carousel-inner ">
+        <ng-container *ngFor="let item of listMobile">
+          <div class="carousel-item   " [ngClass]="{' active ' : item == 0 }">
+            <div class="">
+              <div class="row d-flex justify-content-around px-1 mx-0">
+                <div class="col-6 px-1">
+                  <img class="pve-img " src="./assets/images/pve_{{(item*2)+1}}.PNG">
+                </div>
+                <div class="col-6  px-1">
+                  <img class="pve-img " src="./assets/images/pve_{{(item*2)+2}}.PNG">
+                </div>
+              </div>
+            </div>
+          </div>
+        </ng-container>
+      </div>
+
+      <button class="carousel-control-prev" type="button" data-target="#carouselControlsMobile" data-slide="prev">
+        <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
+        <i class=" icon-prev fas fa-chevron-left"></i>
+        <span class="sr-only">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-target="#carouselControlsMobile" data-slide="next">
+        <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
+        <i class="icon-next fas fa-chevron-right"></i>
+        <span class="sr-only">Next</span>
+      </button>
+    </div>
   </div>
-</div>
 
 
   <!-- strat temoignages -->
-  <div id="temoignages"  class=" mt-5 pt-3 mb-5">
+  <div id="temoignages" class=" mt-5 pt-3 mb-5">
     <h3 class="temoignages-title text-center mb-4"> - شهادة - </h3>
     <div id="carouselControls" class="carousel slide px-5 " data-ride="carousel">
 
@@ -196,20 +176,22 @@
           <div class="row d-flex justify-content-center">
             <div class="col-sm-3 col-12 text-center d-flex align-items-center justify-content-center ">
               <div>
-                <img class="temoignages-img " src="./assets/images/img-home-temoignage-1.png" >
-              <p class="temoignages-name mt-3"> <strong>Ouakka Achraf</strong> <br><br></p>
+                <img class="temoignages-img " src="./assets/images/img-home-temoignage-1.png">
+                <p class="temoignages-name mt-3"> <strong>Ouakka Achraf</strong> <br><br></p>
               </div>
             </div>
             <div class="col-sm-8 col-12 d-flex align-items-center ">
               <div class="temoignages-text text-sm-right" dir="rtl">
-                لضمان نجاح عمليات البيع عبر الإنترنت، كنا بحاجة إلى منصة جاهزة تمكننا من إنشاء وإضافة المنتجات بسهولة وفقًا لمتطلبات العملاء. اختيار <b>nex<span style="color: var(--main-color-dis);">ProMa</span></b> كان قرارًا موفقًا لفريقنا. لقد جعلت إدارة المنتجات والمبيعات أمرًا بسيطًا.
+                لضمان نجاح عمليات البيع عبر الإنترنت، كنا بحاجة إلى منصة جاهزة تمكننا من إنشاء وإضافة المنتجات بسهولة
+                وفقًا لمتطلبات العملاء. اختيار <b>nex<span style="color: var(--main-color-dis);">ProMa</span></b> كان
+                قرارًا موفقًا لفريقنا. لقد جعلت إدارة المنتجات والمبيعات أمرًا بسيطًا.
               </div>
-              </div>
+            </div>
           </div>
         </div>
 
       </div>
-     <button class="carousel-control-prev" type="button" data-target="#carouselControls" data-slide="prev">
+      <button class="carousel-control-prev" type="button" data-target="#carouselControls" data-slide="prev">
         <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
         <i class=" icon-prev fas fa-chevron-left"></i>
         <span class="sr-only">Previous</span>
@@ -228,8 +210,8 @@
 
 
 <!-- Start footer setcion -->
-<app-home-mian-footer ></app-home-mian-footer>
-<app-home-sub-footer ></app-home-sub-footer>
+<app-home-mian-footer></app-home-mian-footer>
+<app-home-sub-footer></app-home-sub-footer>
 
 <!-- Start scroll-top fix bottom -->
 <app-scroll-top></app-scroll-top>
