--- a/src/app/components/home/best-product/best-product.component.html
+++ b/src/app/components/home/best-product/best-product.component.html
@@ -60,7 +60,7 @@
             <ng-container *ngFor="let item of article.nbr_img_ary">
               <div class="carousel-item   " [ngClass]="{' active ' : item == 1 }">
                 <img class="product-img "
-                  src="../../../../assets/images/produits/{{article.name_img}}/{{article.name_img}}_{{item}}.png">
+                  src="./assets/images/produits/{{article.name_img}}/{{article.name_img}}_{{item}}.png">
               </div>
             </ng-container>
           </div>
